Docs: Fix the Table Text Overlaping Issue
Change the font-size of tables to avoid overflow of text in tables

Resolves: #107

--- a/assets/scss/components/_tables.scss
+++ b/assets/scss/components/_tables.scss
@@ -1,5 +1,5 @@
 table {
   @extend .table;
-
+  font-size: x-small;
   margin: 3rem 0;
 }
